styles.css
@import url("https://fonts.googleapis.com/css2?family=Jersey+10&family=Pixelify+Sans:wght@400..700&display=swap");

*,
*::before,
*::after {
  box-sizing: inherit;
}

html {
  box-sizing: border-box;
  cursor: url("cursors/pixel_wand.cur"), auto;
  font-family: "Pixelify Sans", sans-serif;
  font-optical-sizing: auto;
  font-weight: 100;
  font-style: normal;
  font-size: larger;
  background-color: #ccc;
  background-image: url("images/desk.png");
  background-size: cover;
  background-repeat: no-repeat;
}

html > * ::selection {
  background-color: pink;
}

body {
  max-width: 50vw;
  padding: 2rem;
  margin: auto;
  font-size: large;
  border: 3px dashed #000;
  background-color: aliceblue;
}

.profile-picture {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: max-content;
}

.profile {
  display: inline-block;
  width: 100px;
  border: 3px dashed #bbb;
  border-radius: 3px;
  margin-right: 1rem;
  grid-row: 1/2;
  grid-column: 1/2;
  margin-bottom: 0;
  background-color: white;
  align-self: start;
}

.mariam-profile ul {
  list-style: none;
}

.websites {
  margin: 0;
  display: flex;
  gap: 1rem;
  padding: 0;
}

.websites li {
  padding: 0;
  margin: 0;
  height: 1.5rem;
}

.profile-picture span {
  width: 100px;
  max-height: max-content;
  color: white;
  text-align: center;
  border-radius: 3px;
  grid-column: 1/2;
  font-size: small;
  margin-top: 0;
  background: linear-gradient(
    90deg,
    rgba(255, 255, 255, 1) 0%,
    rgba(156, 242, 149, 1) 0%,
    rgba(9, 121, 56, 1) 50%
  );
  margin-top: -3px;
}

.mariam-profile {
  display: grid;
  grid-template-columns: auto auto;
}
.name-websites {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.name-websites .icon {
  width: 1.5rem;
  margin-bottom: 0;
}

nav ul {
  display: flex;
  flex-flow: row wrap;
  gap: 1rem;
  list-style: none;
}

a:hover,
a:focus {
  cursor: url("cursors/angel_pointer.cur"), auto;
}

h1 {
  display: inline;
  margin: 0;
}

li::selection {
  background-color: pink;
}

li {
  width: fit-content;
}

li a::hover {
  cursor: url("cursors/text_select.cur"), auto;
}

.logo {
  width: 3rem;
}

.skills ul {
  list-style: none;
  display: flex;
  gap: 1rem;
  flex-flow: row wrap;
}

a:has(img) {
  display: inline;
  text-decoration: none;
}

span:has(time) {
  color: grey;
}

.education .flexbox,
.work .flexbox {
  display: flex;
  flex-direction: row;
  justify-content: start;
  align-items: center;
}

.flexbox .text span {
  display: block;
  margin: 0 1rem;
}

h3 {
  display: inline-block;
  margin: 0 1rem;
}
.work p:nth-of-type(2) {
  display: inline-block;
}

@media (max-width: 1500px) {
  body {
    margin: 0 auto;
    max-width: 100%;
    border: none;
  }
}

@media (max-width: 500px) {
  header nav {
    display: none;
  }
}

